// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Render an inline element 1`] = `
<div>
  <div>
    Lindsay McIntosh Scottish Political Editor
  </div>
</div>
`;

exports[`2. Render an author first 1`] = `
<div>
  <div>
    Camilla Long
  </div>
  <div>
    , Environment Editor
  </div>
</div>
`;

exports[`3. Render an author last 1`] = `
<div>
  <div>
    RBS Six Nations 
  </div>
  <div>
    Mike Atherton
  </div>
</div>
`;

exports[`4. Render multiple authors separated by commas 1`] = `
<div>
  <div>
    Camilla Long
  </div>
  <div>
    , 
  </div>
  <div>
    Mike Atherton
  </div>
  <div>
    , 
  </div>
  <div>
    Alexandra Frean
  </div>
</div>
`;

exports[`5. Render multiple authors separated by spaces 1`] = `
<div>
  <div>
    Camilla Long
  </div>
  <div>
     
  </div>
  <div>
    Mike Atherton
  </div>
  <div>
     
  </div>
  <div>
    Alexandra Frean
  </div>
</div>
`;

exports[`6. Render null when AST is empty 1`] = `null`;
